--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  /* color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87); */
   background-color: #242424;
-  
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -26,6 +22,7 @@ body {
   font-family: Arial, sans-serif;
   background-color: #4c4c64;
   margin: 0;
+  color: red;
   display: flex;
   place-items: center;
   min-width: 320px;
