--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ body {
   font-family: Arial, sans-serif;
   background-color: #4c4c64;
   margin: 0;
-  color: red;
+  color: rgb(65, 9, 26);
   display: flex;
   place-items: center;
   min-width: 320px;
