--- a/src/pages/form/addproductform.module.css
+++ b/src/pages/form/addproductform.module.css
@@ -34,7 +34,6 @@
   border: none;
   /* border: 1px solid #ccc; */
   box-shadow: 0 0 0 1px #ccc;
-  
   border-radius: 5px;
   font-size: 16px;
   box-sizing: border-box; 
@@ -53,6 +52,10 @@ input[data-invalid="true"] {
   display: block;
   font-size: 15.5px;
   margin-top: 5px;
+  color: red;
+}
+
+.condition_error{
   color: red;
 }
   
